test/fail/AbsToConDecl.agda
module AbsToConDecl where

x where
    data D (A : Set) : Set where
      c : D A
